# tiny-chat

./: README.md  package-lock.json  package.json
.github/workflows/: deploy.yml  release.yml
apps/tauri/: 2  Cargo.toml  build.rs  package.json  tauri.conf.json
apps/tauri/assets/icons/: icon.icns
apps/tauri/src/: lib.rs  main.rs
apps/web/: index.ts  package.json  pm2.config.cjs
core/backend/: generate.ts  index.ts  package.json  pm2.config.cjs  prisma.config.ts  server.ts  stream.ts  tsconfig.json  types.ts
core/backend/prisma/: schema.prisma
core/backend/providers/chat/: anthropic-ai.ts  debug.ts  google-ai-studio.ts  index.ts  microsoft-foundry.ts
core/backend/providers/search/: brave.ts  index.ts
core/backend/routes/: chats.ts  context.ts  embeddings.ts  folders.ts  memories.ts  messages.ts  providers.ts  services.ts  sessions.ts
core/backend/services/: anthropic-ai.ts  debug.ts  google-ai-studio.ts  index.ts  microsoft-foundry.ts
core/backend/tools/: find-memories.ts  index.ts  search-memory.ts  search-web.ts  update-memory.ts
core/frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
core/frontend/public/: site.webmanifest
core/frontend/src/: App.tsx  main.css  main.tsx  theme.tsx  utils.ts
core/frontend/src/components/: Attachments.tsx  Chat.tsx  Drawers.tsx  Input.tsx  InputEffect.tsx  Markdown.tsx  Message.tsx  MessageBody.tsx  MessageBodyContent.tsx  MessageBodyPopover.tsx  ModelSelect.tsx  Sidebar.tsx  SidebarChat.tsx  Tasks.tsx  Update.tsx
tools/: wait-for-backend.js
(+22 files in other folders)
