[package]
name = "tiny-chat"
version = "0.1.0"
authors = ["Ryan Garber <ryanmichaelgarber@gmail.com>"]
edition = "2024"

[lib]
name = "tinychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
